to-do-app/frontend-deployment.yaml
# Define 'Service' to expose FrontEnd Application
apiVersion: v1
kind: Service
metadata:
  name: to-do-app-frontend
spec:
  selector: # pod labels should match these
    app: to-do-app
    tier: frontend
  ports:
    -  port: 5680
  type: ClusterIP # use NodePort if you are not running Kubernetes on Cloud
---
# 'Deployment' to manage of configuration of frontEnd Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: to-do-app-frontend
  labels: # pod labels should match these
    app: to-do-app
    tier: frontend
spec:
  replicas: 1  # number of replicas of frontEnd application
  selector:
    matchLabels: 
      app: to-do-app
      tier: frontend
  template:
    metadata:
      labels: # Must match 'Service' and 'Deployment' labels
        app: to-do-app
        tier: frontend  
    spec:                 
      containers: 
      - name: to-do-app-frontend 
        image: kubernetesdemo/to-do-app-frontend # docker image of frontend application
        env: # Setting Environmental Variables
          -  name: SERVER_URI # Setting Backend URI from configMap
             valueFrom:
               configMapKeyRef:
                 name: backend-conf # Name of configMap
                 key: server-uri
        ports:
        - containerPort: 8080
